@@ -25,5 +25,5 @@ Depends: methods
 Suggests: snowfall
 LazyLoad: yes
 LazyData: yes
-Collate: MxData.R DefinitionVars.R MxReservedNames.R MxNamespace.R MxSearchReplace.R MxFlatSearchReplace.R MxUntitled.R MxCharOrNumber.R MxAlgebraFunctions.R MxExponential.R MxMatrix.R DiagMatrix.R FullMatrix.R IdenMatrix.R LowerMatrix.R SdiagMatrix.R StandMatrix.R SymmMatrix.R UnitMatrix.R ZeroMatrix.R MxAlgebra.R MxCycleDetection.R MxDependencies.R MxAlgebraConvert.R MxAlgebraTransform.R MxSquareBracket.R MxEval.R MxRename.R MxPath.R MxObjectiveMetaData.R MxRAMMetaData.R MxObjectiveFunction.R MxBounds.R MxConstraint.R MxInterval.R MxTypes.R MxModel.R MxRAMModel.R MxModelDisplay.R MxFlatModel.R MxMultiModel.R MxModelFunctions.R MxModelParameters.R MxUnitTesting.R MxAlgebraObjective.R MxRowObjective.R MxFIMLObjective.R MxMLObjective.R MxRAMObjective.R MxLISRELObjective.R MxRObjective.R MxApply.R MxRun.R MxRunHelperFunctions.R MxSummary.R MxCompare.R MxSwift.R MxOptions.R MxThreshold.R OriginalMx.R MxGraph.R MxGraphviz.R MxDeparse.R MxCommunication.R MxRestore.R MxVersion.R MxErrorPool.R MxPPML.R MxRAMtoML.R MxDiff.R MxErrorHandling.R MxDetectCores.R MxWLSObjective.R omxBrownie.R zzz.R
+Collate: MxData.R DefinitionVars.R MxReservedNames.R MxNamespace.R MxSearchReplace.R MxFlatSearchReplace.R MxUntitled.R MxCharOrNumber.R MxAlgebraFunctions.R MxExponential.R MxMatrix.R DiagMatrix.R FullMatrix.R IdenMatrix.R LowerMatrix.R SdiagMatrix.R StandMatrix.R SymmMatrix.R UnitMatrix.R ZeroMatrix.R MxMatrixFunctions.R MxAlgebra.R MxCycleDetection.R MxDependencies.R MxAlgebraConvert.R MxAlgebraTransform.R MxSquareBracket.R MxEval.R MxRename.R MxPath.R MxObjectiveMetaData.R MxRAMMetaData.R MxObjectiveFunction.R MxBounds.R MxConstraint.R MxInterval.R MxTypes.R MxModel.R MxRAMModel.R MxModelDisplay.R MxFlatModel.R MxMultiModel.R MxModelFunctions.R MxModelParameters.R MxUnitTesting.R MxAlgebraObjective.R MxRowObjective.R MxFIMLObjective.R MxMLObjective.R MxRAMObjective.R MxLISRELObjective.R MxRObjective.R MxApply.R MxRun.R MxRunHelperFunctions.R MxSummary.R MxCompare.R MxSwift.R MxOptions.R MxThreshold.R OriginalMx.R MxGraph.R MxGraphviz.R MxDeparse.R MxCommunication.R MxRestore.R MxVersion.R MxErrorPool.R MxPPML.R MxRAMtoML.R MxDiff.R MxErrorHandling.R MxDetectCores.R MxWLSObjective.R omxBrownie.R zzz.R
 Version: 999.0.0-
